# jira-command-line-app

./: .travis.yml  Cargo.toml  Readme.md
documents/: example_issue.json  resouces.md
src/: main.rs
src/fuzzy/: mod.rs
src/jira/: mod.rs
src/jira/api/: mod.rs
src/jira/utils/: mod.rs
src/sh/: mod.rs
