[package]
name = "j"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
reqwest = "0.11.9"
base64 = "0.13.0"
tokio = { version = "1", features = ["full"] }
serde = "1.0.133"
serde_json = "1.0.59"
serde_derive = "*"